--- a/public/about.html
+++ b/public/about.html
@@ -17,6 +17,15 @@
           <li class="nav-item">
             <a class="nav-link active" href="about.html">Sobre nosotros</a>
           </li>
+          <li class="nav-item ms-auto" id="loginNav">
+            <a class="nav-link" href="login.html">Login</a>
+          </li>
+          <li class="nav-item" id="registerNav">
+              <a class="nav-link" href="register.html">Register</a>
+          </li>
+          <li class="nav-item ms-auto" id="logoutNav" style="display: none;">
+            <button class="nav-link btn btn-link" onclick="logout()">Logout</button>
+          </li>
         </ul>
     </section>
     
@@ -44,6 +53,22 @@
     </main>
 
     <script src="/src/components/footer.js"></script>
+
+    <script>
+      function logout() {
+          localStorage.removeItem('token');
+          localStorage.removeItem('userId');
+          window.location.href = 'login.html';
+      }
+      document.addEventListener('DOMContentLoaded', () => {
+          const token = localStorage.getItem('token');
+          if (token) {
+              document.getElementById('loginNav').style.display = 'none';
+              document.getElementById('registerNav').style.display = 'none';
+              document.getElementById('logoutNav').style.display = 'block';
+          }
+      });
+    </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
